--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@tailwindcss/vite": "^4.1.14",
     "aos": "^2.3.4",
     "firebase": "^12.4.0",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router": "^7.9.4"
+    "react-router": "^7.9.4",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
